--- a/src/core/index.scss
+++ b/src/core/index.scss
@@ -2,3 +2,14 @@
   margin: 0;
   padding: 0;
 }
+.loading {
+  position: fixed;
+  text-align: center;
+  color: white;
+  left: 0;
+  top: 0;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
