--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -225,6 +225,7 @@ $bg: #fff;
     .icon {
       opacity: 0;
       transition: all 0.5s ease;
+      margin-left: 15px;
     }
     .logo_name {
       color: $bg;
