--- a/src/core/scss/variable.scss
+++ b/src/core/scss/variable.scss
@@ -1,10 +1,14 @@
 // color
 $color-primary: #a50064;
 $color-black: #000;
+$color-white: #ffffff;
 
 $color-error: #e9322d;
 $color-warning: #eca700;
 $color-success: #46ba61;
+
+// bg color
+$bg-white: #ffffff;
 
 // image
 $image-bg-sidebar: url('https://static.mservice.io/jk/momo2020/img/momo/bg-taiapp-big-op.jpg') !default;
