--- a/src/core/scss/_base.scss
+++ b/src/core/scss/_base.scss
@@ -16,17 +16,14 @@ body {
 }
 
 .wrapper {
+  z-index:1;
   position: relative;
   background: #ffffff;
   min-height: 100vh;
-  top: 0;
   left: 78px;
   width: calc(100% - 78px);
   transition: all 0.5s ease;
-  z-index: 2;
-  main {
-    &.main {
-      padding: 15px 20px;
-    }
+  @include maxWidth(768px) {
+    width: 100%;
   }
 }
